--- a/Ecologia/style.css
+++ b/Ecologia/style.css
@@ -1,4 +1,55 @@
+hr {
+    border-color: green;
+    border-radius: 5px;
+    border: 5px solid green;
+}
+
+#hr1 {
+    width: 14vw;
+}
+
+#hr2 {
+    width: 12vw;
+}
+
+#hr3 {
+    width: 10vw;
+}
+
+#hr4 {
+    border: 5px solid black;
+}
+
+#hr5 {
+
+}
+
+h1 {
+    font-family: 'Lucida Handwriting', 'Verdana', 'Arial', sans-serif;
+    text-align: center;
+}
+
 body {
-    background-color: black;
-    color: white;
+    background-color: rgb(201, 226, 233);
+    color: black;
+}
+
+#div01 {
+    border: 3px solid red;
+    border-radius: 5px ;
+    font-family: Arial, Helvetica, sans-serif;
+    margin-left: 5vw;
+    margin-right: 5vw;
+    padding-left: 1vw;
+    border-style: groove;
+}
+
+#div02 {
+    
+    
+    font-family: Arial, Helvetica, sans-serif;
+    margin-left: 5vw;
+    margin-right: 5vw;
+    padding-left: 1vw;
+    border-style: groove;
 }
