--- a/Projetos_Vida/style.css
+++ b/Projetos_Vida/style.css
@@ -1,52 +1,32 @@
-hr {
-    border-color: green;
-    border-radius: 5px;
-    border: 5px solid green;
-}
-
-#hr1 {
-    width: 14vw;
-}
-
-#hr2 {
-    width: 12vw;
-}
-
-#hr3 {
-    width: 10vw;
-}
-
-#hr4, #hr5 {
-    border: 5px solid black;
-    margin-left: 5vw;
-    margin-right: 5vw;
-}
-
-h1 {
-    font-family: 'Lucida Handwriting', 'Verdana', 'Arial', sans-serif;
-    text-align: center;
-}
-
 body {
-    background-color: rgb(201, 226, 233);
-    color: black;
+    background-color: rgb(137, 241, 137);
 }
 
-#div01 {
-    border: 3px solid red;
-    border-radius: 5px ;
-    font-family: Arial, Helvetica, sans-serif;
-    margin-left: 5vw;
-    margin-right: 5vw;
-    padding-left: 1vw;
-    border-style: groove;
+main {
+    background-color: white;
+    border-radius: 10px;
+    padding: 20px;
+    min-width: 280px;
+    max-width: 800px;
+    margin: auto;
 }
 
-#div02 {
-    font-family: 'Lucida Handwriting', 'Verdana', 'Arial', sans-serif;
-    margin-left: 72vw;
-    margin-right: 5vw;
-    padding-left: 1vw;
-    border-style: inset;
-    ;
+h1, h3, h4 {
+    font-family: "Grape Nuts", cursive;
+}
+
+p {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+}
+
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+
+  }
+
+img {
+    border-radius: 50%;
 }
