--- a/Ecologia/style.css
+++ b/Ecologia/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: rgb(137, 241, 137);
+    background-color: rgb(156, 243, 156);
 }
 
 main {
@@ -16,7 +16,12 @@ h1, h3, h4 {
 }
 
 p {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    text-indent: 30px;
+}
+
+li {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .center {
