--- a/Projetos_Vida/style.css
+++ b/Projetos_Vida/style.css
@@ -16,7 +16,8 @@ h1, h3, h4 {
 }
 
 p {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    text-indent: 30px
 }
 
 .center {
