--- a/Main/style.css
+++ b/Main/style.css
@@ -11,7 +11,7 @@ main {
     margin: auto;
 }
 
-h1, h3 {
+h1, h3, h4 {
     font-family: "Grape Nuts", cursive;
 }
 
@@ -33,5 +33,9 @@ li {
   }
 
 img {
+    border-radius: 5%;
+}
+
+#des{
     border-radius: 5%;
 }
